# city_builder_rl

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
godot/: project.godot
godot/scenes/: Main.tscn
godot/scripts/: Main.gd
tests/: __init__.py  test_actions.py  test_bridge.py  test_buildings.py  test_cli.py  test_config.py  test_evaluate.py  test_events.py  test_grid.py  test_gym_env.py  test_integration.py  test_observation.py  test_population.py  test_protocol.py  test_resources.py  test_reward.py  test_services.py  test_train.py  test_turn.py  test_victory.py
vitruvius/: __init__.py  cli.py
vitruvius/bridge/: __init__.py  protocol.py  server.py
vitruvius/config/: __init__.py  buildings.yaml  city_levels.yaml  events.yaml  needs.yaml  resources.yaml
vitruvius/engine/: __init__.py  actions.py  buildings.py  events.py  game_state.py  grid.py  population.py  resources.py  services.py  terrain.py  turn.py  victory.py
vitruvius/rl/: __init__.py  action_mask.py  evaluate.py  gym_env.py  observation.py  reward.py  train.py
