[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vitruvius"
version = "0.1.0"
description = "City builder tour par tour Rome antique avec agent RL"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "vnoise>=0.1.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.1",
    "sb3-contrib>=2.1",
    "torch>=2.0",
    "tensorboard>=2.14",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
